@@ -69,17 +69,9 @@
     
     <build>
         <plugins>
- 			<plugin>
+ 	    <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.3.RELEASE</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin> 
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
@@ -107,37 +99,7 @@
                     </to>
                 </configuration>
             </plugin>  
- 			<plugin>
-		        <groupId>org.apache.maven.plugins</groupId>
-		        <artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-			    <configuration>
-			        <release>11</release>
-			    </configuration>
-      		</plugin>
-            <plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-surefire-plugin</artifactId>
-			    <version>2.22.0</version>
-			    <configuration>
-			        <argLine>
-			            --illegal-access=permit
-			        </argLine>
-			    </configuration>
-			</plugin>
-			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-failsafe-plugin</artifactId>
-			    <version>2.22.0</version>
-			    <configuration>
-			        <argLine>
-			            --illegal-access=permit
-			        </argLine>
-			    </configuration>
-			</plugin> 
-
-
-			
+		
         </plugins>
     </build>
 </project>
